--- a/test-report/features/f34d549d-e94a-423f-829f-9aec6b60ea89-login-feature.html
+++ b/test-report/features/f34d549d-e94a-423f-829f-9aec6b60ea89-login-feature.html
@@ -1286,7 +1286,7 @@ body.darkmode .navbar-text {
                                 
 
                                 <div class="text">
-                                    <span class="keyword highlight">And </span>
+                                    <span class="keyword highlight">Then </span>
 
                                     
                                         user should land on the dashboard
